--- a/RTRS/RTRS/Base.lproj/LaunchScreen.storyboard
+++ b/RTRS/RTRS/Base.lproj/LaunchScreen.storyboard
@@ -19,22 +19,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RickyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="beO-5z-TDv">
-                                <rect key="frame" x="0.0" y="177" width="414" height="343"/>
+                                <rect key="frame" x="199" y="445" width="16" height="16"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="beO-5z-TDv" secondAttribute="bottom" constant="342" id="3NY-m4-b8F"/>
-                            <constraint firstItem="beO-5z-TDv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="e10-Kh-Sgn"/>
-                            <constraint firstItem="beO-5z-TDv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="133" id="hIK-3N-c6y"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="beO-5z-TDv" secondAttribute="trailing" constant="1.1368683772161603e-13" id="wLG-up-CQB"/>
+                            <constraint firstItem="beO-5z-TDv" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ETZ-Yu-uRD"/>
+                            <constraint firstItem="beO-5z-TDv" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="auF-d0-RiW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="375"/>
+            <point key="canvasLocation" x="58" y="392"/>
         </scene>
     </scenes>
     <resources>
