--- a/RTRS/RTRS/Base.lproj/Main.storyboard
+++ b/RTRS/RTRS/Base.lproj/Main.storyboard
@@ -193,10 +193,111 @@
                             <outlet property="delegate" destination="bOP-We-QCa" id="fdW-tF-9y3"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <segue destination="TLI-CJ-GAl" kind="show" identifier="AUArticleSegue" id="ada-qY-ZrK"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hjA-jI-jsN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="986" y="2308"/>
+            <point key="canvasLocation" x="545" y="2321"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Pjr-G5-tZm">
+            <objects>
+                <viewController id="Uyz-ww-AnW" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VB3-ER-tgp">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="iJT-Wi-4dZ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5ST-Lv-u4q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1612" y="2321"/>
+        </scene>
+        <!--Corner Article View Controller-->
+        <scene sceneID="Ohz-tD-fVP">
+            <objects>
+                <viewController id="TLI-CJ-GAl" customClass="AUCornerArticleViewController" customModule="RTRS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DMu-4e-ITZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0VL-Nu-n0L">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8wu-f2-bDP">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="217"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="217" id="wGp-Mi-Z8t"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhT-k4-Vy5">
+                                        <rect key="frame" x="8" y="155" width="44" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="WBA-bo-fl3"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dzj-qz-93n">
+                                        <rect key="frame" x="0.0" y="245" width="414" height="524"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="524" id="N9G-zu-Waw"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DATE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VvJ-fK-Hxo">
+                                        <rect key="frame" x="8" y="220" width="398" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="gF9-Uv-fi4"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="dzj-qz-93n" firstAttribute="leading" secondItem="0VL-Nu-n0L" secondAttribute="leading" id="CGG-jW-VGI"/>
+                                    <constraint firstItem="uhT-k4-Vy5" firstAttribute="leading" secondItem="0VL-Nu-n0L" secondAttribute="leading" constant="8" id="Ecf-rM-pIh"/>
+                                    <constraint firstAttribute="trailing" secondItem="VvJ-fK-Hxo" secondAttribute="trailing" constant="8" id="GdK-mM-4mF"/>
+                                    <constraint firstItem="VvJ-fK-Hxo" firstAttribute="leading" secondItem="0VL-Nu-n0L" secondAttribute="leading" constant="8" id="OMz-FD-KvK"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="uhT-k4-Vy5" secondAttribute="trailing" constant="100" id="PUI-wJ-nhm"/>
+                                    <constraint firstItem="dzj-qz-93n" firstAttribute="top" secondItem="VvJ-fK-Hxo" secondAttribute="bottom" constant="4" id="Qt4-R1-zKB"/>
+                                    <constraint firstItem="8wu-f2-bDP" firstAttribute="centerX" secondItem="0VL-Nu-n0L" secondAttribute="centerX" id="VX2-4h-Oy3"/>
+                                    <constraint firstItem="8wu-f2-bDP" firstAttribute="leading" secondItem="0VL-Nu-n0L" secondAttribute="leading" id="c4f-Lk-L7u"/>
+                                    <constraint firstAttribute="trailing" secondItem="8wu-f2-bDP" secondAttribute="trailing" id="oKc-3P-Dzd"/>
+                                    <constraint firstItem="8wu-f2-bDP" firstAttribute="top" secondItem="0VL-Nu-n0L" secondAttribute="top" id="oe2-aJ-THB"/>
+                                    <constraint firstItem="VvJ-fK-Hxo" firstAttribute="top" secondItem="uhT-k4-Vy5" secondAttribute="bottom" constant="15" id="orl-ce-ZtJ"/>
+                                    <constraint firstItem="VvJ-fK-Hxo" firstAttribute="top" secondItem="8wu-f2-bDP" secondAttribute="bottom" constant="3" id="sWe-LE-jnd"/>
+                                    <constraint firstAttribute="trailing" secondItem="dzj-qz-93n" secondAttribute="trailing" id="ucf-qF-e8a"/>
+                                    <constraint firstAttribute="bottom" secondItem="dzj-qz-93n" secondAttribute="bottom" id="wfr-yZ-R9h"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="0VL-Nu-n0L" firstAttribute="bottom" secondItem="ZdB-6T-Tla" secondAttribute="bottom" id="07V-mr-Vi8"/>
+                            <constraint firstItem="0VL-Nu-n0L" firstAttribute="top" secondItem="ZdB-6T-Tla" secondAttribute="top" id="2HJ-bb-DCI"/>
+                            <constraint firstItem="ZdB-6T-Tla" firstAttribute="trailing" secondItem="0VL-Nu-n0L" secondAttribute="trailing" id="Sto-2c-jyY"/>
+                            <constraint firstItem="0VL-Nu-n0L" firstAttribute="leading" secondItem="ZdB-6T-Tla" secondAttribute="leading" id="gVG-or-5u9"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ZdB-6T-Tla"/>
+                    </view>
+                    <connections>
+                        <outlet property="dateLabel" destination="VvJ-fK-Hxo" id="vGD-I8-2Ti"/>
+                        <outlet property="imageView" destination="8wu-f2-bDP" id="co5-XC-if3"/>
+                        <outlet property="scrollView" destination="0VL-Nu-n0L" id="gDU-E1-tDc"/>
+                        <outlet property="titleLabel" destination="uhT-k4-Vy5" id="u26-iN-kIS"/>
+                        <outlet property="webViewContainer" destination="dzj-qz-93n" id="ofY-3C-mwy"/>
+                        <outlet property="webViewHeightConstraint" destination="N9G-zu-Waw" id="i5d-Ug-R1T"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hgA-CY-MOP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="545" y="3038"/>
         </scene>
         <!--Root Tab Controller-->
         <scene sceneID="Iab-g1-HhG">
@@ -489,7 +590,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UON-Ax-pA4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="105.79710144927537" y="1591.7410714285713"/>
+            <point key="canvasLocation" x="-271" y="1592"/>
         </scene>
     </scenes>
     <resources>
